--- a/references.bib
+++ b/references.bib
@@ -1,73 +1,217 @@
-@misc{hoebelheinrich_nancy_j_2022_6769695,
-  author       = {Hoebelheinrich, Nancy J and
-                  Biernacka, Katarzyna and
-                  Brazas, Michelle and
-                  Castro, Leyla Jael and
-                  Fiore, Nicola and
-                  Hellstrom, Margareta and
-                  Lazzeri, Emma and
-                  Leenarts, Ellen and
-                  Martinez Lavanchy, Paula Maria and
-                  Newbold, Elizabeth and
-                  Nurnberger, Amy and
-                  Plomp, Esther and
-                  Vaira, Lucia and
-                  van Gelder, Celia W G and
-                  Whyte, Angus},
-  title        = {{Recommendations for a minimal metadata set to aid 
-                   harmonised discovery of learning resources}},
-  month        = jun,
-  year         = 2022,
-  publisher    = {Zenodo},
-  version      = {1.0},
-  doi          = {10.15497/RDA00073},
-  url          = {https://doi.org/10.15497/RDA00073}
+@article {efoldmine,
+	Title = {Exploring the Sequence-based Prediction of Folding Initiation Sites in Proteins},
+	Author = {Raimondi, Daniele and Orlando, Gabriele and Pancsa, Rita and Khan, Taushif and Vranken, Wim F},
+	DOI = {10.1038/s41598-017-08366-3},
+	Number = {1},
+	Volume = {7},
+	Month = {August},
+	Year = {2017},
+	Journal = {Scientific reports},
+	ISSN = {2045-2322},
+	Pages = {8826},
+	Abstract = {Protein folding is a complex process that can lead to disease when it fails. Especially poorly understood are the very early stages of protein folding, which are likely defined by intrinsic local interactions between amino acids close to each other in the protein sequence. We here present EFoldMine, a method that predicts, from the primary amino acid sequence of a protein, which amino acids are likely involved in early folding events. The method is based on early folding data from hydrogen deuterium exchange (HDX) data from NMR pulsed labelling experiments, and uses backbone and sidechain dynamics as well as secondary structure propensities as features. The EFoldMine predictions give insights into the folding process, as illustrated by a qualitative comparison with independent experimental observations. Furthermore, on a quantitative proteome scale, the predicted early folding residues tend to become the residues that interact the most in the folded structure, and they are often residues that display evolutionary covariation. The connection of the EFoldMine predictions with both folding pathway data and the folded protein structure suggests that the initial statistical behavior of the protein chain with respect to local structure formation has a lasting effect on its subsequent states.},
+	URL = {https://europepmc.org/articles/PMC5562875},
 }
 
-@article{Garcia2020,
-  abstract      = {Everything we do today is becoming more and more reliant on the use of computers. The field of biology is no exception; but most biologists receive little or no formal preparation for the increasingly computational aspects of their discipline. In consequence, informal training courses are often needed to plug the gaps; and the demand for such training is growing worldwide. To meet this demand, some training programs are being expanded, and new ones are being developed. Key to both scenarios is the creation of new course materials. Rather than starting from scratch, however, it's sometimes possible to repurpose materials that already exist. Yet finding suitable materials online can be difficult: They're often widely scattered across the internet or hidden in their home institutions, with no systematic way to find them. This is a common problem for all digital objects. The scientific community has attempted to address this issue by developing a set of rules (which have been called the Findable, Accessible, Interoperable and Reusable [FAIR] principles) to make such objects more findable and reusable. Here, we show how to apply these rules to help make training materials easier to find, (re)use, and adapt, for the benefit of all.},
-  author        = {Garcia, Leyla and Batut, B{\'{e}}r{\'{e}}nice and Burke, Melissa L. and Kuzak, Mateusz and Psomopoulos, Fotis and Arcila, Ricardo and Attwood, Teresa K. and Beard, Niall and Carvalho-Silva, Denise and Dimopoulos, Alexandros C. and {Del Angel}, Victoria Dominguez and Dumontier, Michel and Gurwitz, Kim T. and Krause, Roland and McQuilton, Peter and {Le Pera}, Loredana and Morgan, Sarah L. and Rauste, P{\"{a}}ivi and Via, Allegra and Kahlem, Pascal and Rustici, Gabriella and {Van Gelder}, Celia W.G. and Palagi, Patricia M.},
-  doi           = {10.1371/journal.pcbi.1007854},
-  file          = {:Users/geertvangeest/Downloads/pcbi.1007854.pdf:pdf},
-  isbn          = {1111111111},
-  issn          = {15537358},
-  journal       = {PLoS Computational Biology},
-  number        = {5},
-  pages         = {1--9},
-  pmid          = {32437350},
-  title         = {{Ten simple rules for making training materials FAIR}},
-  volume        = {16},
-  year          = {2020}
-}
-
-
-@misc{creative_commons_2022, 
-  title={When we share, everyone wins}, 
-  url={https://creativecommons.org/}, 
-  publisher={Creative Commons}, 
-  note = {Accessed: 2022-08-11}
-} 
-
-@misc{open-source-licenses, 
-title={Open Source Licenses: Types and Comparison}, 
-url={https://snyk.io/learn/open-source-licenses/}, 
-publisher={Snyk}, 
-note = {Accessed: 2023-02-10}
-} 
-
-@article{10.1093/bioinformatics/btt113,
-    author = {Ison, Jon and Kalaš, Matúš and Jonassen, Inge and Bolser, Dan and Uludag, Mahmut and McWilliam, Hamish and Malone, James and Lopez, Rodrigo and Pettifer, Steve and Rice, Peter},
-    title = "{EDAM: an ontology of bioinformatics operations, types of data and identifiers, topics and formats}",
+@article{agmata,
+    author = {Orlando, Gabriele and Silva, Alexandra and Macedo-Ribeiro, Sandra and Raimondi, Daniele and Vranken, Wim},
+    title = {Accurate prediction of protein beta-aggregation with generalized statistical potentials},
     journal = {Bioinformatics},
-    volume = {29},
-    number = {10},
-    pages = {1325-1332},
-    year = {2013},
-    month = {03},
-    abstract = "{Motivation: Advancing the search, publication and integration of bioinformatics tools and resources demands consistent machine-understandable descriptions. A comprehensive ontology allowing such descriptions is therefore required.Results: EDAM is an ontology of bioinformatics operations (tool or workflow functions), types of data and identifiers, application domains and data formats. EDAM supports semantic annotation of diverse entities such as Web services, databases, programmatic libraries, standalone tools, interactive applications, data schemas, datasets and publications within bioinformatics. EDAM applies to organizing and finding suitable tools and data and to automating their integration into complex applications or workflows. It includes over 2200 defined concepts and has successfully been used for annotations and implementations.Availability: The latest stable version of EDAM is available in OWL format from http://edamontology.org/EDAM.owl and in OBO format from http://edamontology.org/EDAM.obo. It can be viewed online at the NCBO BioPortal and the EBI Ontology Lookup Service. For documentation and license please refer to http://edamontology.org. This article describes version 1.2 available at http://edamontology.org/EDAM\_1.2.owl.Contact: jison@ebi.ac.uk}",
+    volume = {36},
+    number = {7},
+    pages = {2076-2081},
+    year = {2019},
+    month = {12},
+    abstract = {Protein beta-aggregation is an important but poorly understood phenomena involved in diseases as well as in beneficial physiological processes. However, while this task has been investigated for over 50 years, very little is known about its mechanisms of action. Moreover, the identification of regions involved in aggregation is still an open problem and the state-of-the-art methods are often inadequate in real case applications.In this article we present AgMata, an unsupervised tool for the identification of such regions from amino acidic sequence based on a generalized definition of statistical potentials that includes biophysical information. The tool outperforms the state-of-the-art methods on two different benchmarks. As case-study, we applied our tool to human ataxin-3, a protein involved in Machado–Joseph disease. Interestingly, AgMata identifies aggregation-prone residues that share the very same structural environment. Additionally, it successfully predicts the outcome of in vitro mutagenesis experiments, identifying point mutations that lead to an alteration of the aggregation propensity of the wild-type ataxin-3.A python implementation of the tool is available at https://bitbucket.org/bio2byte/agmata.Supplementary data are available at Bioinformatics online.},
     issn = {1367-4803},
-    doi = {10.1093/bioinformatics/btt113},
-    url = {https://doi.org/10.1093/bioinformatics/btt113},
-    eprint = {https://academic.oup.com/bioinformatics/article-pdf/29/10/1325/710075/btt113.pdf},
+    doi = {10.1093/bioinformatics/btz912},
+    url = {https://doi.org/10.1093/bioinformatics/btz912},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/36/7/2076/50670159/bioinformatics_36_7_2076.pdf},
 }
-  
+
+@article{shiftcrypt,
+    author = {Orlando, Gabriele and Raimondi, Daniele and Kagami, Luciano Porto and Vranken, Wim F},
+    title = {ShiftCrypt: a web server to understand and biophysically align proteins through their NMR chemical shift values},
+    journal = {Nucleic Acids Research},
+    volume = {48},
+    number = {W1},
+    pages = {W36-W40},
+    year = {2020},
+    month = {05},
+    abstract = {Nuclear magnetic resonance (NMR) spectroscopy data provides valuable information on the behaviour of proteins in solution. The primary data to determine when studying proteins are the per-atom NMR chemical shifts, which reflect the local environment of atoms and provide insights into amino acid residue dynamics and conformation. Within an amino acid residue, chemical shifts present multi-dimensional and complexly cross-correlated information, making them difficult to analyse. The ShiftCrypt method, based on neural network auto-encoder architecture, compresses the per-amino acid chemical shift information in a single, interpretable, amino acid-type independent value that reflects the biophysical state of a residue. We here present the ShiftCrypt web server, which makes the method readily available. The server accepts chemical shifts input files in the NMR Exchange Format (NEF) or NMR-STAR format, executes ShiftCrypt and visualises the results, which are also accessible via an API. It also enables the ”biophysically-based” pairwise alignment of two proteins based on their ShiftCrypt values. This approach uses Dynamic Time Warping and can optionally include their amino acid code information, and has applications in, for example, the alignment of disordered regions. The server uses a token-based system to ensure the anonymity of the users and results. The web server is available at www.bio2byte.be/shiftcrypt.},
+    issn = {0305-1048},
+    doi = {10.1093/nar/gkaa391},
+    url = {https://doi.org/10.1093/nar/gkaa391},
+    eprint = {https://academic.oup.com/nar/article-pdf/48/W1/W36/33432832/gkaa391.pdf},
+}
+
+@article{psper,
+    author = {Orlando, Gabriele and Raimondi, Daniele and Tabaro, Francesco and Codicè, Francesco and Moreau, Yves and Vranken, Wim F},
+    title = {Computational identification of prion-like RNA-binding proteins that form liquid phase-separated condensates},
+    journal = {Bioinformatics},
+    volume = {35},
+    number = {22},
+    pages = {4617-4623},
+    year = {2019},
+    month = {04},
+    abstract = {Eukaryotic cells contain different membrane-delimited compartments, which are crucial for the biochemical reactions necessary to sustain cell life. Recent studies showed that cells can also trigger the formation of membraneless organelles composed by phase-separated proteins to respond to various stimuli. These condensates provide new ways to control the reactions and phase-separation proteins (PSPs) are thus revolutionizing how cellular organization is conceived. The small number of experimentally validated proteins, and the difficulty in discovering them, remain bottlenecks in PSPs research.Here we present PSPer, the first in-silico screening tool for prion-like RNA-binding PSPs. We show that it can prioritize PSPs among proteins containing similar RNA-binding domains, intrinsically disordered regions and prions. PSPer is thus suitable to screen proteomes, identifying the most likely PSPs for further experimental investigation. Moreover, its predictions are fully interpretable in the sense that it assigns specific functional regions to the predicted proteins, providing valuable information for experimental investigation of targeted mutations on these regions. Finally, we show that it can estimate the ability of artificially designed proteins to form condensates (r=−0.87), thus providing an in-silico screening tool for protein design experiments.PSPer is available at bio2byte.com/psp.Supplementary data are available at Bioinformatics online.},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btz274},
+    url = {https://doi.org/10.1093/bioinformatics/btz274},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/35/22/4617/48978636/bioinformatics_35_22_4617.pdf},
+}
+
+@article{disomine,
+title = {Prediction of Disordered Regions in Proteins with Recurrent Neural Networks and Protein Dynamics},
+journal = {Journal of Molecular Biology},
+volume = {434},
+number = {12},
+pages = {167579},
+year = {2022},
+issn = {0022-2836},
+doi = {https://doi.org/10.1016/j.jmb.2022.167579},
+url = {https://www.sciencedirect.com/science/article/pii/S0022283622001590},
+author = {Gabriele Orlando and Daniele Raimondi and Francesco Codicè and Francesco Tabaro and Wim Vranken},
+keywords = {Intrinsically disordered proteins, Protein disorder prediction, Neural networks, Machine learning, Protein backbone dynamics},
+abstract = {The role of intrinsically disordered protein regions (IDRs) in cellular processes has become increasingly evident over the last years. These IDRs continue to challenge structural biology experiments because they lack a well-defined conformation, and bioinformatics approaches that accurately delineate disordered protein regions remain essential for their identification and further investigation. Typically, these predictors use the protein amino acid sequence, without taking into account likely sequence-dependent emergent properties, such as protein backbone dynamics. Here we present DisoMine, a method that predicts protein’long disorder’ with recurrent neural networks from simple predictions of protein dynamics, secondary structure and early folding. The tool is fast and requires only a single sequence, making it applicable for large-scale screening, including poorly studied and orphan proteins. DisoMine is a top performer in its category and compares well to disorder prediction approaches using evolutionary information. DisoMine is freely available through an interactive webserver at https://bio2byte.be/disomine/}
+}
+
+@article {b2btools,
+	Title = {bio2Byte Tools deployment as a Python package and Galaxy tool to predict protein biophysical properties},
+	Author = {Gavalda-Garcia, Jose and Díaz, Adrián and Vranken, Wim},
+	DOI = {10.1093/bioinformatics/btae543},
+	Number = {9},
+	Volume = {40},
+	Month = {September},
+	Year = {2024},
+	Journal = {Bioinformatics (Oxford, England)},
+	ISSN = {1367-4803},
+	Pages = {btae543},
+	Abstract = {&lt;h4&gt;Summary&lt;/h4&gt;We introduce a unified Python package for the prediction of protein biophysical properties, streamlining previous tools developed by the Bio2Byte research group. This suite facilitates comprehensive assessments of protein characteristics, incorporating predictors for backbone and sidechain dynamics, local secondary structure propensities, early folding, long disorder, beta-sheet aggregation, and fused in sarcoma (FUS)-like phase separation. Our package significantly eases the integration and execution of these tools, enhancing accessibility for both computational and experimental researchers.&lt;h4&gt;Availability and implementation&lt;/h4&gt;The suite is available on the Python Package Index (PyPI): https://pypi.org/project/b2bTools/ and Bioconda: https://bioconda.github.io/recipes/b2btools/README.html for Linux and macOS systems, with Docker images hosted on Biocontainers: https://quay.io/repository/biocontainers/b2btools?tab=tags&amp;tag=latest and Docker Hub: https://hub.docker.com/u/bio2byte. Online deployments are available on Galaxy Europe: https://usegalaxy.eu/root?tool_id=b2btools_single_sequence and our online server: https://bio2byte.be/b2btools/. The source code can be found at https://bitbucket.org/bio2byte/b2btools_releases.},
+	URL = {https://europepmc.org/articles/PMC11873786},
+}
+
+@article {dynamine,
+	Title = {From protein sequence to dynamics and disorder with DynaMine},
+	Author = {Cilia, Elisa and Pancsa, Rita and Tompa, Peter and Lenaerts, Tom and Vranken, Wim F},
+	DOI = {10.1038/ncomms3741},
+	Volume = {4},
+	Year = {2013},
+	Journal = {Nature communications},
+	ISSN = {2041-1723},
+	Pages = {2741},
+	Abstract = {Protein function and dynamics are closely related; however, accurate dynamics information is difficult to obtain. Here based on a carefully assembled data set derived from experimental data for proteins in solution, we quantify backbone dynamics properties on the amino-acid level and develop DynaMine--a fast, high-quality predictor of protein backbone dynamics. DynaMine uses only protein sequence information as input and shows great potential in distinguishing regions of different structural organization, such as folded domains, disordered linkers, molten globules and pre-structured binding motifs of different sizes. It also identifies disordered regions within proteins with an accuracy comparable to the most sophisticated existing predictors, without depending on prior disorder knowledge or three-dimensional structural information. DynaMine provides molecular biologists with an important new method that grasps the dynamical characteristics of any protein of interest, as we show here for human p53 and E1A from human adenovirus 5.},
+	URL = {https://doi.org/10.1038/ncomms3741},
+}
+
+@article{b2btools-webserver,
+    author = {Kagami, Luciano Porto and Orlando, Gabriele and Raimondi, Daniele and Ancien, Francois and Dixit, Bhawna and Gavaldá-García, Jose and Ramasamy, Pathmanaban and Roca-Martínez, Joel and Tzavella, Konstantina and Vranken, Wim},
+    title = {b2bTools: online predictions for protein biophysical features and their conservation},
+    journal = {Nucleic Acids Research},
+    volume = {49},
+    number = {W1},
+    pages = {W52-W59},
+    year = {2021},
+    month = {05},
+    abstract = {We provide integrated protein sequence-based predictions via https://bio2byte.be/b2btools/. The aim of our predictions is to identify the biophysical behaviour or features of proteins that are not readily captured by structural biology and/or molecular dynamics approaches. Upload of a FASTA file or text input of a sequence provides integrated predictions from DynaMine backbone and side-chain dynamics, conformational propensities, and derived EFoldMine early folding, DisoMine disorder, and Agmata β-sheet aggregation. These predictions, several of which were previously not available online, capture ‘emergent’ properties of proteins, i.e. the inherent biophysical propensities encoded in their sequence, rather than context-dependent behaviour (e.g. final folded state). In addition, upload of a multiple sequence alignment (MSA) in a variety of formats enables exploration of the biophysical variation observed in homologous proteins. The associated plots indicate the biophysical limits of functionally relevant protein behaviour, with unusual residues flagged by a Gaussian mixture model analysis. The prediction results are available as JSON or CSV files and directly accessible via an API. Online visualisation is available as interactive plots, with brief explanations and tutorial pages included. The server and API employ an email-free token-based system that can be used to anonymously access previously generated results.},
+    issn = {0305-1048},
+    doi = {10.1093/nar/gkab425},
+    url = {https://doi.org/10.1093/nar/gkab425},
+    eprint = {https://academic.oup.com/nar/article-pdf/49/W1/W52/38842326/gkab425.pdf},
+}
+
+@article {Scop3P,
+	Title = {Scop3P: A Comprehensive Resource of Human Phosphosites within Their Full Context},
+	Author = {Ramasamy, Pathmanaban and Turan, Demet and Tichshenko, Natalia and Hulstaert, Niels and Vandermarliere, Elien and Vranken, Wim and Martens, Lennart},
+	DOI = {10.1021/acs.jproteome.0c00306},
+	Number = {8},
+	Volume = {19},
+	Month = {August},
+	Year = {2020},
+	Journal = {Journal of proteome research},
+	ISSN = {1535-3893},
+	Pages = {3478—3486},
+	Abstract = {Protein phosphorylation is a key post-translational modification in many biological processes and is associated to human diseases such as cancer and metabolic disorders. The accurate identification, annotation, and functional analysis of phosphosites are therefore crucial to understand their various roles. Phosphosites are mainly analyzed through phosphoproteomics, which has led to increasing amounts of publicly available phosphoproteomics data. Several resources have been built around the resulting phosphosite information, but these are usually restricted to the protein sequence and basic site metadata. What is often missing from these resources, however, is context, including protein structure mapping, experimental provenance information, and biophysical predictions. We therefore developed Scop3P: a comprehensive database of human phosphosites within their full context. Scop3P integrates sequences (UniProtKB/Swiss-Prot), structures (PDB), and uniformly reprocessed phosphoproteomics data (PRIDE) to annotate all known human phosphosites. Furthermore, these sites are put into biophysical context by annotating each phosphoprotein with per-residue structural propensity, solvent accessibility, disordered probability, and early folding information. Scop3P, available at https://iomics.ugent.be/scop3p, presents a unique resource for visualization and analysis of phosphosites and for understanding of phosphosite structure-function relationships.},
+	URL = {https://doi.org/10.1021/acs.jproteome.0c00306},
+}
+
+@article {ptms-af3,
+	Title = {Assessing the relation between protein phosphorylation, AlphaFold3 models, and conformational variability},
+	Author = {Ramasamy, Pathmanaban and Zuallaert, Jasper and Martens, Lennart and Vranken, Wim F},
+	DOI = {10.1002/pro.70376},
+	Number = {1},
+	Volume = {35},
+	Month = {January},
+	Year = {2026},
+	Journal = {Protein science : a publication of the Protein Society},
+	ISSN = {0961-8368},
+	Pages = {e70376},
+	Abstract = {Proteins perform diverse functions critical to cellular processes. Transitions between functional states are often regulated by post-translational modifications (PTMs) such as phosphorylation, which dynamically influence protein structure, function, folding, and interactions. Dysregulation of PTMs can therefore contribute to diseases such as cancer and Alzheimer's. However, the structure-function relationship between proteins and their modifications remains poorly understood due to a lack of experimental structural data, the inherent diversity of PTMs, and the dynamic nature of proteins. Recent advances in deep learning, particularly AlphaFold, have transformed protein structure prediction with near-experimental accuracy. However, it remains unclear whether these models can effectively capture PTM-driven conformational changes, such as those induced by phosphorylation. Here, we systematically evaluated AlphaFold models (AF2, AF3-non phospho, and AF3-phospho) to assess their ability to predict phosphorylation-induced structural diversity. By analyzing experimentally derived conformational ensembles, we found that all models predominantly aligned with dominant structural states, often failing to capture phosphorylation-specific conformations. Despite its phosphorylation-aware design, AF3-phospho predictions provided only modest improvement over AF2 and AF3-non phospho predictions. Our findings highlight key challenges in modeling PTM-driven structural landscapes and underscore the need for more adaptable structure prediction frameworks capable of capturing modification-induced conformational variability.},
+	URL = {https://europepmc.org/articles/PMC12723721},
+}
+
+@article{MolStar,
+    author = {Sehnal, David and Bittrich, Sebastian and Deshpande, Mandar and Svobodová, Radka and Berka, Karel and Bazgier, Václav and Velankar, Sameer and Burley, Stephen K and Koča, Jaroslav and Rose, Alexander S},
+    title = {Mol* Viewer: modern web app for 3D visualization and analysis of large biomolecular structures},
+    journal = {Nucleic Acids Research},
+    volume = {49},
+    number = {W1},
+    pages = {W431-W437},
+    year = {2021},
+    month = {05},
+    abstract = {Large biomolecular structures are being determined experimentally on a daily basis using established techniques such as crystallography and electron microscopy. In addition, emerging integrative or hybrid methods (I/HM) are producing structural models of huge macromolecular machines and assemblies, sometimes containing 100s of millions of non-hydrogen atoms. The performance requirements for visualization and analysis tools delivering these data are increasing rapidly. Significant progress in developing online, web-native three-dimensional (3D) visualization tools was previously accomplished with the introduction of the LiteMol suite and NGL Viewers. Thereafter, Mol* development was jointly initiated by PDBe and RCSB PDB to combine and build on the strengths of LiteMol (developed by PDBe) and NGL (developed by RCSB PDB). The web-native Mol* Viewer enables 3D visualization and streaming of macromolecular coordinate and experimental data, together with capabilities for displaying structure quality, functional, or biological context annotations. High-performance graphics and data management allows users to simultaneously visualise up to hundreds of (superimposed) protein structures, stream molecular dynamics simulation trajectories, render cell-level models, or display huge I/HM structures. It is the primary 3D structure viewer used by PDBe and RCSB PDB. It can be easily integrated into third-party services. Mol* Viewer is open source and freely available at https://molstar.org/.},
+    issn = {0305-1048},
+    doi = {10.1093/nar/gkab314},
+    url = {https://doi.org/10.1093/nar/gkab314},
+    eprint = {https://academic.oup.com/nar/article-pdf/49/W1/W431/38842088/gkab314.pdf},
+}
+
+@article{MolViewSpec,
+    author = {Midlik, Adam and Bittrich, Sebastian and Fleming, Jennifer R and Nair, Sreenath and Velankar, Sameer and Burley, Stephen K and Young, Jasmine Y and Vallat, Brinda and Sehnal, David},
+    title = {MolViewSpec: a Mol* extension for describing and sharing molecular visualizations},
+    journal = {Nucleic Acids Research},
+    volume = {53},
+    number = {W1},
+    pages = {W408-W414},
+    year = {2025},
+    month = {05},
+    abstract = {Data visualization is a pivotal component of a structural biologist’s arsenal. The Mol* Viewer makes molecular visualizations available to broader audiences via most web browsers. While Mol* provides a wide range of functionality, it has a steep learning curve and is only available via a JavaScript interface. To enhance the accessibility and usability of web-based molecular visualization, we introduce MolViewSpec (molstar.org/mol-view-spec), a standardized approach for defining molecular visualizations that decouples the definition of complex molecular scenes from their rendering. Scene definition can include references to commonly used structural, volumetric, and annotation data formats together with a description of how the data should be visualized and paired with optional annotations specifying colors, labels, measurements, and custom 3D geometries. Developed as an open standard, this solution paves the way for broader interoperability and support across different programming languages and molecular viewers, enabling more streamlined, standardized, and reproducible visual molecular analyses. MolViewSpec is freely available as a Mol* extension and a standalone Python package.},
+    issn = {1362-4962},
+    doi = {10.1093/nar/gkaf370},
+    url = {https://doi.org/10.1093/nar/gkaf370},
+    eprint = {https://academic.oup.com/nar/article-pdf/53/W1/W408/63067309/gkaf370.pdf},
+}
+
+@article{UniProtConsortium,
+    author = {The UniProt Consortium },
+    title = {UniProt: the Universal Protein Knowledgebase in 2025},
+    journal = {Nucleic Acids Research},
+    volume = {53},
+    number = {D1},
+    pages = {D609-D617},
+    year = {2024},
+    month = {11},
+    abstract = {The aim of the UniProt Knowledgebase (UniProtKB; https://www.uniprot.org/) is to provide users with a comprehensive, high-quality and freely accessible set of protein sequences annotated with functional information. In this publication, we describe ongoing changes to our production pipeline to limit the sequences available in UniProtKB to high-quality, non-redundant reference proteomes. We continue to manually curate the scientific literature to add the latest functional data and use machine learning techniques. We also encourage community curation to ensure key publications are not missed. We provide an update on the automatic annotation methods used by UniProtKB to predict information for unreviewed entries describing unstudied proteins. Finally, updates to the UniProt website are described, including a new tab linking protein to genomic information. In recognition of its value to the scientific community, the UniProt database has been awarded Global Core Biodata Resource status.},
+    issn = {1362-4962},
+    doi = {10.1093/nar/gkae1010},
+    url = {https://doi.org/10.1093/nar/gkae1010},
+    eprint = {https://academic.oup.com/nar/article-pdf/53/D1/D609/60719276/gkae1010.pdf},
+}
+
+@software{geert_van_geest_2023_7913092,
+  author       = {Geert van Geest and
+                  Elin Kronander and
+                  Jose Alejandro Romero Herrera and
+                  Nadja Žlender and
+                  ELIXIR Training Coordination Team and
+                  Alexia Cardona},
+  title        = {The ELIXIR Training Lesson Template - Developing
+                   Training Together
+                  },
+  month        = may,
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {v1.0.0-alpha},
+  doi          = {10.5281/zenodo.7913092},
+  url          = {https://doi.org/10.5281/zenodo.7913092},
+}
